@@ -1,0 +1,16 @@
+data_atom_array
+loop_
+_atom_site_label
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_attached_hydrogens
+C1 ? ? ? 3
+C2 ? ? ? 1
+O1 ? ? ? 0
+O2 ? ? ? 2
+loop_
+_geom_bond_atom_site_label_1
+_geom_bond_atom_site_label_2
+C1 C2
+C2 O1
