@@ -1,6 +1,11 @@
 cod-tools (unreleased)
 
-  * ...
+  * Added:
+    - COD::AtomNeighbours:
+      - the neighbour_list_to_cif_datablock() subroutine.
+  * Changed:
+    - COD::CIF::Data::AtomList:
+      - ignoring missing atom information in datablock_from_atom_array().
 
 cod-tools (2.12)
 
